孙梦琴-1712980-源码/孙梦琴+李羿欣-1712980+171297-源码/y.output
Terminals unused in grammar

   CONSTANT
   STRING_LITERAL
   SIZEOF
   PTR_OP
   TYPE_NAME
   '?'


Grammar

    0 $accept: Program $end

    1 Program: translation_unit

    2 primary_expression: IDENTIFIER
    3                   | TRUE
    4                   | FALSE
    5                   | CONSTANT_INT
    6                   | CONSTANT_DOUBLE
    7                   | '(' expression ')'
    8                   | CONSTANT_STRING

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression INC_OP
   14                   | postfix_expression DEC_OP

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list ',' assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator unary_expression

   21 unary_operator: '+'
   22               | '-'
   23               | '~'
   24               | '!'

   25 multiplicative_expression: unary_expression
   26                          | multiplicative_expression '*' unary_expression
   27                          | multiplicative_expression '/' unary_expression
   28                          | multiplicative_expression '%' unary_expression

   29 additive_expression: multiplicative_expression
   30                    | additive_expression '+' multiplicative_expression
   31                    | additive_expression '-' multiplicative_expression

   32 shift_expression: additive_expression
   33                 | shift_expression LEFT_OP additive_expression
   34                 | shift_expression RIGHT_OP additive_expression

   35 relational_expression: shift_expression
   36                      | relational_expression '<' shift_expression
   37                      | relational_expression '>' shift_expression
   38                      | relational_expression LE_OP shift_expression
   39                      | relational_expression GE_OP shift_expression

   40 equality_expression: relational_expression
   41                    | equality_expression EQ_OP relational_expression
   42                    | equality_expression NE_OP relational_expression

   43 and_expression: equality_expression
   44               | and_expression '&' equality_expression

   45 exclusive_or_expression: and_expression
   46                        | exclusive_or_expression '^' and_expression

   47 inclusive_or_expression: exclusive_or_expression
   48                        | inclusive_or_expression '|' exclusive_or_expression

   49 logical_and_expression: inclusive_or_expression
   50                       | logical_and_expression AND_OP inclusive_or_expression

   51 logical_or_expression: logical_and_expression
   52                      | logical_or_expression OR_OP logical_and_expression

   53 assignment_expression: logical_or_expression
   54                      | unary_expression assignment_operator assignment_expression

   55 assignment_operator: '='
   56                    | MUL_ASSIGN
   57                    | DIV_ASSIGN
   58                    | MOD_ASSIGN
   59                    | ADD_ASSIGN
   60                    | SUB_ASSIGN
   61                    | LEFT_ASSIGN
   62                    | RIGHT_ASSIGN
   63                    | AND_ASSIGN
   64                    | XOR_ASSIGN
   65                    | OR_ASSIGN

   66 expression: assignment_expression
   67           | expression ',' assignment_expression

   68 declaration: type_specifier ';'
   69            | type_specifier init_declarator_list ';'

   70 init_declarator_list: init_declarator
   71                     | init_declarator_list ',' init_declarator

   72 init_declarator: declarator
   73                | declarator '=' initializer

   74 type_specifier: VOID
   75               | CHAR
   76               | INT
   77               | DOUBLE
   78               | BOOL
   79               | STRING

   80 declarator: IDENTIFIER
   81           | '(' declarator ')'
   82           | declarator '[' assignment_expression ']'
   83           | declarator '[' '*' ']'
   84           | declarator '[' ']'
   85           | declarator '(' parameter_list ')'
   86           | declarator '(' identifier_list ')'
   87           | declarator '(' ')'

   88 parameter_list: parameter_declaration
   89               | parameter_list ',' parameter_declaration

   90 parameter_declaration: type_specifier declarator
   91                      | type_specifier abstract_declarator
   92                      | type_specifier

   93 identifier_list: IDENTIFIER
   94                | identifier_list ',' IDENTIFIER

   95 abstract_declarator: '(' abstract_declarator ')'
   96                    | '[' ']'
   97                    | '[' assignment_expression ']'
   98                    | abstract_declarator '[' ']'
   99                    | abstract_declarator '[' assignment_expression ']'
  100                    | '[' '*' ']'
  101                    | abstract_declarator '[' '*' ']'
  102                    | '(' ')'
  103                    | '(' parameter_list ')'
  104                    | abstract_declarator '(' ')'
  105                    | abstract_declarator '(' parameter_list ')'

  106 initializer: assignment_expression
  107            | '{' initializer_list '}'
  108            | '{' initializer_list ',' '}'

  109 initializer_list: initializer
  110                 | designation initializer
  111                 | initializer_list ',' initializer
  112                 | initializer_list ',' designation initializer

  113 designation: designator_list '='

  114 designator_list: designator
  115                | designator_list designator

  116 designator: '[' logical_or_expression ']'
  117           | '.' IDENTIFIER

  118 statement: labeled_statement
  119          | compound_statement
  120          | expression_statement
  121          | selection_statement
  122          | iteration_statement
  123          | jump_statement

  124 labeled_statement: IDENTIFIER ':' statement
  125                  | CASE logical_or_expression ':' statement

  126 compound_statement: '{' '}'
  127                   | '{' block_item_list '}'

  128 block_item_list: block_item
  129                | block_item_list block_item

  130 block_item: declaration
  131           | statement

  132 expression_statement: ';'
  133                     | expression ';'

  134 selection_statement: IF '(' expression ')' statement
  135                    | IF '(' expression ')' statement ELSE statement
  136                    | SWITCH '(' expression ')' statement

  137 iteration_statement: WHILE '(' expression ')' statement
  138                    | DO statement WHILE '(' expression ')' ';'
  139                    | FOR '(' expression_statement expression_statement ')' statement
  140                    | FOR '(' expression_statement expression_statement expression ')' statement
  141                    | FOR '(' declaration expression_statement ')' statement
  142                    | FOR '(' declaration expression_statement expression ')' statement

  143 jump_statement: GOTO IDENTIFIER ';'
  144               | CONTINUE ';'
  145               | BREAK ';'
  146               | RETURN ';'
  147               | RETURN expression ';'

  148 translation_unit: external_declaration
  149                 | translation_unit external_declaration

  150 external_declaration: function_definition
  151                     | declaration

  152 function_definition: type_specifier declarator declaration_list compound_statement
  153                    | type_specifier declarator compound_statement

  154 declaration_list: declaration
  155                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 24
'%' (37) 28
'&' (38) 44
'(' (40) 7 11 12 81 85 86 87 95 102 103 104 105 134 135 136 137 138
    139 140 141 142
')' (41) 7 11 12 81 85 86 87 95 102 103 104 105 134 135 136 137 138
    139 140 141 142
'*' (42) 26 83 100 101
'+' (43) 21 30
',' (44) 16 67 71 89 94 108 111 112
'-' (45) 22 31
'.' (46) 117
'/' (47) 27
':' (58) 124 125
';' (59) 68 69 132 133 138 143 144 145 146 147
'<' (60) 36
'=' (61) 55 73 113
'>' (62) 37
'?' (63)
'[' (91) 10 82 83 84 96 97 98 99 100 101 116
']' (93) 10 82 83 84 96 97 98 99 100 101 116
'^' (94) 46
'{' (123) 107 108 126 127
'|' (124) 48
'}' (125) 107 108 126 127
'~' (126) 23
error (256)
IDENTIFIER (258) 2 80 93 94 117 124 143
CONSTANT (259)
STRING_LITERAL (260)
SIZEOF (261)
CONSTANT_INT (262) 5
CONSTANT_DOUBLE (263) 6
CONSTANT_STRING (264) 8
PTR_OP (265)
INC_OP (266) 13 18
DEC_OP (267) 14 19
LEFT_OP (268) 33
RIGHT_OP (269) 34
LE_OP (270) 38
GE_OP (271) 39
EQ_OP (272) 41
NE_OP (273) 42
AND_OP (274) 50
OR_OP (275) 52
MUL_ASSIGN (276) 56
DIV_ASSIGN (277) 57
MOD_ASSIGN (278) 58
ADD_ASSIGN (279) 59
SUB_ASSIGN (280) 60
LEFT_ASSIGN (281) 61
RIGHT_ASSIGN (282) 62
AND_ASSIGN (283) 63
XOR_ASSIGN (284) 64
OR_ASSIGN (285) 65
TYPE_NAME (286)
CHAR (287) 75
INT (288) 76
DOUBLE (289) 77
VOID (290) 74
BOOL (291) 78
STRING (292) 79
CASE (293) 125
IF (294) 134 135
ELSE (295) 135
SWITCH (296) 136
WHILE (297) 137 138
DO (298) 138
FOR (299) 139 140 141 142
GOTO (300) 143
CONTINUE (301) 144
BREAK (302) 145
RETURN (303) 146 147
TRUE (304) 3
FALSE (305) 4
LOWER_THAN_ELSE (306)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
Program (77)
    on left: 1, on right: 0
primary_expression (78)
    on left: 2 3 4 5 6 7 8, on right: 9
postfix_expression (79)
    on left: 9 10 11 12 13 14, on right: 10 11 12 13 14 17
argument_expression_list (80)
    on left: 15 16, on right: 12 16
unary_expression (81)
    on left: 17 18 19 20, on right: 18 19 20 25 26 27 28 54
unary_operator (82)
    on left: 21 22 23 24, on right: 20
multiplicative_expression (83)
    on left: 25 26 27 28, on right: 26 27 28 29 30 31
additive_expression (84)
    on left: 29 30 31, on right: 30 31 32 33 34
shift_expression (85)
    on left: 32 33 34, on right: 33 34 35 36 37 38 39
relational_expression (86)
    on left: 35 36 37 38 39, on right: 36 37 38 39 40 41 42
equality_expression (87)
    on left: 40 41 42, on right: 41 42 43 44
and_expression (88)
    on left: 43 44, on right: 44 45 46
exclusive_or_expression (89)
    on left: 45 46, on right: 46 47 48
inclusive_or_expression (90)
    on left: 47 48, on right: 48 49 50
logical_and_expression (91)
    on left: 49 50, on right: 50 51 52
logical_or_expression (92)
    on left: 51 52, on right: 52 53 116 125
assignment_expression (93)
    on left: 53 54, on right: 15 16 54 66 67 82 97 99 106
assignment_operator (94)
    on left: 55 56 57 58 59 60 61 62 63 64 65, on right: 54
expression (95)
    on left: 66 67, on right: 7 10 67 133 134 135 136 137 138 140 142
    147
declaration (96)
    on left: 68 69, on right: 130 141 142 151 154 155
init_declarator_list (97)
    on left: 70 71, on right: 69 71
init_declarator (98)
    on left: 72 73, on right: 70 71
type_specifier (99)
    on left: 74 75 76 77 78 79, on right: 68 69 90 91 92 152 153
declarator (100)
    on left: 80 81 82 83 84 85 86 87, on right: 72 73 81 82 83 84 85
    86 87 90 152 153
parameter_list (101)
    on left: 88 89, on right: 85 89 103 105
parameter_declaration (102)
    on left: 90 91 92, on right: 88 89
identifier_list (103)
    on left: 93 94, on right: 86 94
abstract_declarator (104)
    on left: 95 96 97 98 99 100 101 102 103 104 105, on right: 91 95
    98 99 101 104 105
initializer (105)
    on left: 106 107 108, on right: 73 109 110 111 112
initializer_list (106)
    on left: 109 110 111 112, on right: 107 108 111 112
designation (107)
    on left: 113, on right: 110 112
designator_list (108)
    on left: 114 115, on right: 113 115
designator (109)
    on left: 116 117, on right: 114 115
statement (110)
    on left: 118 119 120 121 122 123, on right: 124 125 131 134 135
    136 137 138 139 140 141 142
labeled_statement (111)
    on left: 124 125, on right: 118
compound_statement (112)
    on left: 126 127, on right: 119 152 153
block_item_list (113)
    on left: 128 129, on right: 127 129
block_item (114)
    on left: 130 131, on right: 128 129
expression_statement (115)
    on left: 132 133, on right: 120 139 140 141 142
selection_statement (116)
    on left: 134 135 136, on right: 121
iteration_statement (117)
    on left: 137 138 139 140 141 142, on right: 122
jump_statement (118)
    on left: 143 144 145 146 147, on right: 123
translation_unit (119)
    on left: 148 149, on right: 1 149
external_declaration (120)
    on left: 150 151, on right: 148 149
function_definition (121)
    on left: 152 153, on right: 150
declaration_list (122)
    on left: 154 155, on right: 152 155


state 0

    0 $accept: . Program $end

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    STRING  shift, and go to state 6

    Program               go to state 7
    declaration           go to state 8
    type_specifier        go to state 9
    translation_unit      go to state 10
    external_declaration  go to state 11
    function_definition   go to state 12


state 1

   75 type_specifier: CHAR .

    $default  reduce using rule 75 (type_specifier)


state 2

   76 type_specifier: INT .

    $default  reduce using rule 76 (type_specifier)


state 3

   77 type_specifier: DOUBLE .

    $default  reduce using rule 77 (type_specifier)


state 4

   74 type_specifier: VOID .

    $default  reduce using rule 74 (type_specifier)


state 5

   78 type_specifier: BOOL .

    $default  reduce using rule 78 (type_specifier)


state 6

   79 type_specifier: STRING .

    $default  reduce using rule 79 (type_specifier)


state 7

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 8

  151 external_declaration: declaration .

    $default  reduce using rule 151 (external_declaration)


state 9

   68 declaration: type_specifier . ';'
   69            | type_specifier . init_declarator_list ';'
  152 function_definition: type_specifier . declarator declaration_list compound_statement
  153                    | type_specifier . declarator compound_statement

    IDENTIFIER  shift, and go to state 14
    ';'         shift, and go to state 15
    '('         shift, and go to state 16

    init_declarator_list  go to state 17
    init_declarator       go to state 18
    declarator            go to state 19


state 10

    1 Program: translation_unit .
  149 translation_unit: translation_unit . external_declaration

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    STRING  shift, and go to state 6

    $default  reduce using rule 1 (Program)

    declaration           go to state 8
    type_specifier        go to state 9
    external_declaration  go to state 20
    function_definition   go to state 12


state 11

  148 translation_unit: external_declaration .

    $default  reduce using rule 148 (translation_unit)


state 12

  150 external_declaration: function_definition .

    $default  reduce using rule 150 (external_declaration)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

   80 declarator: IDENTIFIER .

    $default  reduce using rule 80 (declarator)


state 15

   68 declaration: type_specifier ';' .

    $default  reduce using rule 68 (declaration)


state 16

   81 declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 14
    '('         shift, and go to state 16

    declarator  go to state 21


state 17

   69 declaration: type_specifier init_declarator_list . ';'
   71 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 22
    ','  shift, and go to state 23


state 18

   70 init_declarator_list: init_declarator .

    $default  reduce using rule 70 (init_declarator_list)


state 19

   72 init_declarator: declarator .
   73                | declarator . '=' initializer
   82 declarator: declarator . '[' assignment_expression ']'
   83           | declarator . '[' '*' ']'
   84           | declarator . '[' ']'
   85           | declarator . '(' parameter_list ')'
   86           | declarator . '(' identifier_list ')'
   87           | declarator . '(' ')'
  152 function_definition: type_specifier declarator . declaration_list compound_statement
  153                    | type_specifier declarator . compound_statement

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    DOUBLE  shift, and go to state 3
    VOID    shift, and go to state 4
    BOOL    shift, and go to state 5
    STRING  shift, and go to state 6
    '='     shift, and go to state 24
    '['     shift, and go to state 25
    '{'     shift, and go to state 26
    '('     shift, and go to state 27

    $default  reduce using rule 72 (init_declarator)

    declaration         go to state 28
    type_specifier      go to state 29
